--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -22,4 +22,5 @@
     <p class="text-sm font-medium md-1">{{name}}</p>
     <!-- <button class="text-sm font-medium mt-1 hover:text-green-200" (click)="auth.logout({ returnTo: 'http://localhost:4200' })">Log out</button> -->
     <button class="text-sm font-medium mt-1 hover:text-green-200" (click)="auth.logout({ returnTo: 'https://muzixapp.netlify.app/' })">Log out</button>
+    <!-- <button class="text-sm font-medium mt-1 hover:text-green-200" (click)="auth.logout({ returnTo: 'https://www.google.com/' })">Log out</button> -->
   </div>
