--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,5 @@
 <footer class="p-10 bg-gray-100 flex flex-col justify-center items-center">
   <h3 class="font-bold text-4xl m-2">Muzix</h3> 
-  <small class="rights m-2">Project from Group 1</small>
+  <small class="rights m-2">© Copyright 2022</small>
+  <small class="rights m-2">Made with 💙 by Kamal</small>
 </footer>
